--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 		"format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
 		"lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
 		"lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
-		"prepare": "husky install"
+		"prepare": "husky install",
+    "commitlint": "commitlint --config commitlint.config.cjs -e -V"
 	},
 	"dependencies": {
 		"vue": "^3.5.13"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^19.6.1",
+		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/js": "^9.17.0",
 		"@types/node": "^22.10.2",
 		"@vitejs/plugin-vue": "^5.2.1",
