--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc -b && vite build",
+		"build:test": "vue-tsc && vite build --mode test",
+		"build:pro": "vue-tsc && vite build --mode production",
 		"preview": "vite preview",
 		"lint": "eslint src",
 		"fix": "eslint src --fix",
@@ -13,9 +15,12 @@
 		"lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
 		"lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
 		"prepare": "husky install",
-		"commitlint": "commitlint --config commitlint.config.cjs -e -V"
+		"commitlint": "commitlint --config commitlint.config.cjs -e -V",
+		"preinstall": "node ./scripts/preinstall.js"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
+		"element-plus": "^2.9.1",
 		"vue": "^3.5.13"
 	},
 	"devDependencies": {
@@ -48,6 +53,7 @@
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.19.0",
 		"vite": "^6.0.5",
+		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^2.2.0"
 	}
 }
